core/src/main/java/com/example/core/errors/exception/SignUpServiceException.java
package com.example.core.errors.exception;

public class SignUpServiceException extends RuntimeException {

  public SignUpServiceException(String message) {
    super(message);
  }
}
